@@ -1,3 +1,9 @@
+2003-11-11 Jens Tkotz <jens@peino.de> 1.4.1-RC2-b3
+
+	* Bugfix: When in Language Mode 0 (No ML at all) then check for
+	  PHP has gettext or not is skipped. So _() was undefined.
+	  Fixed now.
+
 2003-11-11  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC2-b2
 	
 	* Moved gallery/setup/manifest.inc to gallery/manifest.inc as 
